8242804: Fix trivial deprecation issues in jdk.hotspot.agent
Reviewed-by: dholmes, erikj, darcy